src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A25_3.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A25_3 {

  
  class BSup {
    int attr;
  }
  class B extends BSup;

  class C;
  class D extends B;

  association attr D -> C;
}
